[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/bitmap_font_creator/ui/Textures.gd" type="Script" id=1]

[node name="Textures" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="OpenFileDialog" type="FileDialog" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
focus_mode = 2
window_title = "Open a File"
resizable = true
mode = 0
filters = PoolStringArray( "*.png ; PNG Images" )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1024.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="AddTextureButton" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "Add Texture"

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 28.0

[node name="TexturesGrid" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 32.0
size_flags_vertical = 3
columns = 2

[connection signal="file_selected" from="OpenFileDialog" to="." method="_add_texture"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/AddTextureButton" to="." method="_on_AddTextureButton_pressed"]
